<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">snowSMSden</string>
    
    <string name="kontakty">Contacts</string>
    <string name="spravy">Messages</string>
    <string name="mojekontakty">My Contacts</string>
    <string name="mojespravy">My Messages</string>
    <string name="newsmsrec">New SMS Received</string>
    <string name="newsmsnotify">New SMS Notify</string>
    <string name="newsmsclick">New SMS Click</string>
   
    
    <string name="preferences">Settings</string>
    <string name="settings">Settings</string>
    <string name="notifications_title">Notifications received message after completion App</string>
    <string name="repository_title">Repository of Messages</string>
    <string name="repository_summary">0=Cloud MySQL, 1=Google Drive - We are preparing</string>
    <string name="nickname_title">User nickname</string>
    <string name="nickname_summary">For your identify.</string>
    <string name="userid_title">User number</string>
    <string name="userid_summary">Sets program when you send or receive first SMS.</string>
    <string name="prefrepuser">Preferences of repository and user</string>
	<string name="prefrep">Preferences of repository</string>
	<string name="prefuser">Preferences of user</string>
	<string name="prefother">Other Preferences</string>
	<string name="namecloud_title">Name MySql cloud</string>
    <string name="namecloud_summary">Name MySql cloud for repository.</string>
    <string name="namedrive_title">Name GoogleDrive file</string>
    <string name="namedrive_summary">Name GoogleDrive file for repository.</string>
    <string name="userpsw_title">User password</string>
    <string name="userpsw_summary">User password for login to application.</string>
    <string name="usercode_title">User code</string>
    <string name="usercode_summary">User code for encode messages, max. 8 characters.</string>
    <string name="hladanie_title">Find contact</string>
    <string name="hladanie_summary">0=no, 1=yes.</string>
    <string name="hladajtext_title">Text for find in contacts</string>
    <string name="hladajtext_summary">0=no, 1=yes.</string>
    <string name="newsms_title">New Received Message.</string>
	<string name="newsms_summary">The program identifies the New Received Message and send you a warning</string>
    <string name="okpristup_title">authorized access</string>    
	
    <string name="action_newcontact">New contact</string>
    <string name="action_exit">Exit</string>
    <string name="action_hladajcontact">Find contact</string>
    <string name="action_hladajspravy">Choose message</string>
    <string name="action_exitspravy">Exit</string>
    <string name="xspravy">List of messages</string>
    <string name="action_newxsprava">New item</string>
    <string name="contactsaved">Contact %s saved</string>
    <string name="contactdeleted">Contact %s deleted</string>
    <string name="progdata">Loading data. Please wait.</string>
    <string name="nosms">no message</string>
    <string name="receivedsms">New Received Message !</string>
	<string name="receivedsmsfrom">New Received Message from contact</string>
    
    <string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="add_title">Add Message</string>
	<string name="update_title">Update Message</string>
	<string name="delete_title">Delete Message</string>
	<string name="message1">message A</string>
	<string name="message2">message B</string>
	<string name="potrebujeteinternet">For FULL function of the program you need to connect to the Internet!</string>
    <string name="niejeinternet">You do not have an Internet connection!</string>
    <string name="textok">OK</string>
    <string name="textyes">Yes</string>
    <string name="textno">No</string>
    <string name="byedcomsk">by EDcom.sk</string>
    <string name="textmy">My</string>
    <string name="textme">Me</string>
    <string name="textall">All</string>
    <string name="konthladaj">Find</string>
    <string name="number">Number</string>
    <string name="nickname">Nickname</string>
    <string name="xcode">Memo</string>
    <string name="delete_contact">Delete contact ?</string>
    <string name="mynumber">My number</string>
    
    <string name="image1">Image 1</string>
    <string name="textsend">Send</string>
    <string name="popisbtnprep">Serve</string>
	<string name="popisbtnfin">End</string>
	<string name="popisbtnrefresh">Update</string>
	<string name="popisbtnsave">Save</string>
	<string name="popisbtndelete">Delete</string>
    <string name="smszmazat">Delete one message</string>
	<string name="allsmszmazat">Delete all messages</string>
	<string name="zmazat">Delete item</string>
	<string name="upravit">Update item</string>
	<string name="action_previous">Back</string>
	<string name="action_next">Next</string>
	<string name="mojstate_title">Country ( shortcut ) my address</string>
	<string name="mojstate_summary">For registration (voluntary).</string>
    <string name="newsms">new</string>
	
	<string name="akodlhopred"/>
	<string name="akodlhoza">ago</string>
	<string name="minuta1">min.</string>
	<string name="minuta2">min.</string>
	<string name="hodina1">hour</string>
	<string name="hodina2">hours</string>
	<string name="den1">day</string>
	<string name="den2">days</string>
	
	<string name="login">Login</string>
	<string name="password">Password</string>
	<string name="loginpsw">Login ( default psw. 1111 )</string>
	<string name="wrongpsw">Wrong password</string>

    
    
    
    

</resources>
