<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@drawable/pozadie" >

    <TextView
		android:layout_width="fill_parent"
		android:layout_height="10dp"/>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        
	<TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mynumber"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textSize="16sp"
        android:textColor="@drawable/black"
        android:textStyle="bold"
        android:layout_weight="1"/>
	
	<TextView android:id="@+id/mynumber"
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textSize="25sp"
        android:textColor="@drawable/black"
        android:textStyle="bold"
        android:layout_weight="0.8"/>
	
	<ImageView
	android:layout_width="fill_parent"
	android:contentDescription="@string/image1"
	android:id="@+id/casnicka"
	android:clickable="true"
	android:layout_height="50dp"
	android:layout_gravity="center|right"
    android:src="@drawable/stop"
	android:layout_weight="1.2"/>
    
    
    </LinearLayout>
    
    <TextView
		android:layout_width="fill_parent"
		android:layout_height="10dp"/>

    <Button android:id="@+id/btnKontakty"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:visibility="visible"
        android:drawableLeft="@drawable/usertwo_blue_icon"
  		android:gravity="center|center_vertical"
        android:text="@string/kontakty" />
    
    <TextView
		android:layout_width="fill_parent"
		android:layout_height="10dp"/>
    
    <Button android:id="@+id/btnSpravylist"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:visibility="visible"
        android:drawableLeft="@drawable/list_blue_icon"
  		android:gravity="center|center_vertical"
        android:text="@string/spravy" />
    
    

</LinearLayout>
