<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    
    <Button android:id="@+id/btnSavex"
        android:text="@string/popisbtnsave"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>
    
    <Button android:id="@+id/btnDelx"
        android:text="@string/popisbtndelete"
        android:layout_width="fill_parent"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="15sp"/>
    
    </LinearLayout>
    
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	<TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textSize="17sp"
        android:textColor="@drawable/white"
        android:layout_weight="2"/>    
    
    <EditText android:id="@+id/inputCislo"
        android:inputType="number"
        android:enabled="true"
        android:maxLength="6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"/>
    
    </LinearLayout>
     
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	<TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textSize="17sp"
        android:textColor="@drawable/white"
        android:layout_weight="2"/>    
    
    <EditText android:id="@+id/inputNick"
        android:inputType="text"
        android:enabled="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"/>
    
    </LinearLayout>
    
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
	<TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/xcode"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textSize="17sp"
        android:textColor="@drawable/white"
        android:layout_weight="2"/>    
    
    <EditText android:id="@+id/inputCode"
        android:inputType="text"
        android:enabled="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"/>
    
    </LinearLayout>
    
    
    

</LinearLayout>